# commodity-trading

./: .gitignore  Makefile  README.md  pyproject.toml
ctmds/: cli.py  commodity_price_generator.py  commodity_price_series.py  constants.py  country_datetime_series.py  enums.py  random_prices.py
ctmds1/: cli.py  random_prices.py
notebooks/: test.ipynb
tests/: test_commodity_price_generator.py  test_commodity_price_series.py  test_country_datetime_series.py  test_rand_prices.py  test_random_prices.py
