[project]
name = "ctmds1"
version = "0.1.0"
description = ""
authors = [
    {name = "Miller Moore",email = "gmoore316@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --new-first --failed-first"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]